@@ -82,7 +82,7 @@ require 'rpa/install'
 require 'rbconfig'
 class Install_rpa_base < RPA::Install::Application
     name "rpa-base"
-    version "0.2.1-3"
+    version "0.2.1-4"
     classification Application.Admin
     build do
         skip_default Installrdoc
